[workspace]
members = ["crates/*"]
resolver = "2"

[patch.crates-io]
xtra = { git = "https://github.com/Restioson/xtra", rev = "285b3e986013888cb68b9219464ef325d2468c2c" } # Unreleased
maia = { git = "https://github.com/comit-network/maia", rev = "1d70f7818d759fd57c41ca102bc1d4919f1b048a" }
maia-core = { git = "https://github.com/comit-network/maia", rev = "1d70f7818d759fd57c41ca102bc1d4919f1b048a", package = "maia-core" }
xtra_productivity = { git = "https://github.com/comit-network/xtra-productivity", rev = "0bfd589b42a63149221dec7e95aca932875374dd" } # Unreleased
otel-tests = { git = "https://github.com/itchysats/otel-tests/", rev = "f65ac0e99480c20c3fa51c3b4426ac6f61463cfe" } # unreleased

[profile.dev.package.sqlx-macros]
opt-level = 3
