[package]
name = "bitmex-stream"
version = "0.1.0"
edition = "2021"
description = "A stable and simple connection to BitMex's websocket API."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["macros", "time", "tracing"] }
tokio-extras = { path = "../tokio-extras" }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
