[package]
name = "cfd_protocol"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
bdk = { git = "https://github.com/bitcoindevkit/bdk/" }
bit-vec = "0.6"
itertools = "0.10"
rand = "0.6"
secp256k1-zkp = { git = "https://github.com/ElementsProject/rust-secp256k1-zkp", features = ["bitcoin_hashes", "global-context", "serde"] }

[dev-dependencies]
bitcoin = { version = "0.27", features = ["rand", "bitcoinconsensus"] }
proptest = { version = "1", default-features = false, features = ["std"] }
