[package]
name = "daemon-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
bdk-ext = { path = "../bdk-ext" }
daemon = { path = "../daemon" }
maker = { path = "../maker" }
mockall = "0.11"
mockall_derive = "0.11"
model = { path = "../model" }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.10.0", features = ["grpc-sys", "trace"] }
rand = "0.6"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
sqlite-db = { path = "../sqlite-db" }
time = "0.3.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
traced-tests = { path = "../traced-tests" }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "local-time", "tracing-log", "json"] }
xtra = { version = "0.6", features = ["instrumentation"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1", features = ["instrumentation"] }
