[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1.53"
asynchronous-codec = "0.6.0"
bdk = { version = "0.16", default-features = false, features = ["electrum"] }
bdk-ext = { path = "../bdk-ext" }
btsieve = { path = "../btsieve" }
bytes = "1"
cached = { version = "0.34.0", default-features = false, features = ["proc_macro"] }
chashmap-async = "0.1"
conquer-once = "0.3"
derivative = "2"
futures = { version = "0.3", default-features = false, features = ["std"] }
hkdf = "0.12"
itertools = "0.10"
libp2p-core = { version = "0.32", default-features = false }
libp2p-noise = "0.35"
libp2p-tcp = { version = "0.32", default-features = false, features = ["tokio"] }
maia = "0.1.0"
model = { path = "../model" }
parse-display = "0.5.5"
prometheus = { version = "0.13", default-features = false }
rand = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rust_decimal = { version = "1.23", features = ["serde-with-float"] }
rust_decimal_macros = "1.23"
semver = { version = "1.0.7", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["macros"] }
sha2 = "0.10"
snow = "0.9"
sqlx = { version = "0.5", features = ["offline", "sqlite", "uuid", "runtime-tokio-rustls"] }
statrs = "0.15"
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros", "parsing", "formatting", "serde-well-known"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-tasks = { path = "../tokio-tasks", features = ["xtra"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1" }
uuid = { version = "0.8", features = ["serde", "v4"] }
x25519-dalek = { version = "1.1" }
xtra = { version = "0.6", features = ["metrics"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra-libp2p-ping = { path = "../xtra-libp2p-ping" }
xtra_productivity = { version = "0.1.0" }
xtras = { path = "../xtras" }

[dev-dependencies]
pretty_assertions = "1"
serde_test = "1"
test-case = "2"
time = { version = "0.3", features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "tracing-log"] }

[build-dependencies]
vergen = "7"
anyhow = "1"
