[package]
name = "daemon"
version = "0.7.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1.57"
asynchronous-codec = { version = "0.6.0", features = ["json"] }
bdk = { version = "0.21.0", default-features = false, features = ["key-value-db"] }
bdk-ext = { path = "../bdk-ext" }
btsieve = { path = "../btsieve" }
bytes = "1"
conquer-once = "0.3"
dashmap = "5"
derivative = "2"
futures = { version = "0.3", default-features = false, features = ["std"] }
hkdf = "0.12"
itertools = "0.10"
libp2p-core = { version = "0.33", default-features = false }
libp2p-noise = "0.36"
libp2p-tcp = { version = "0.33", default-features = false, features = ["tokio"] }
maia = "0.2.0"
maia-core = "0.1.1"
model = { path = "../model" }
offer = { path = "../xtra-libp2p-offer", package = "xtra-libp2p-offer" }
parse-display = "0.6.0"
ping-pong = { path = "../xtra-libp2p-ping", package = "xtra-libp2p-ping" }
prometheus = { version = "0.13", default-features = false }
rand = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rollover = { path = "../xtra-libp2p-rollover", package = "xtra-libp2p-rollover" }
rust_decimal = { version = "1.26", features = ["serde-with-float"] }
rust_decimal_macros = "1.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["macros"] }
sha2 = "0.10"
snow = "0.9"
sqlite-db = { path = "../sqlite-db" }
sqlx = { version = "0.6.2", features = ["offline", "sqlite", "uuid", "runtime-tokio-rustls"] }
statrs = "0.16"
strum = "0.24"
thiserror = "1"
time = { version = "0.3.14", features = ["serde", "macros", "parsing", "formatting", "serde-well-known"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1" }
uuid = { version = "1.1", features = ["serde", "v4"] }
x25519-dalek = { version = "1.1" }
xtra = { version = "0.6", features = ["instrumentation", "sink"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1.0", features = ["instrumentation"] }
xtras = { path = "../xtras" }

[dev-dependencies]
serde_test = "1"
time = { version = "0.3.14", features = ["std"] }
