[package]
name = "maker"
version = "0.4.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
daemon = { path = "../daemon" }
hex = "0.4"
http-api-problem = { version = "0.51.0", features = ["rocket"] }
model = { path = "../model" }
prometheus = { version = "0.13", default-features = false }
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
rocket-basicauth = { path = "../rocket-basicauth" }
rust-embed = "6.3"
rust-embed-rocket = { path = "../rust-embed-rocket" }
serde = { version = "1", features = ["derive"] }
shared-bin = { path = "../shared-bin" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-tasks = { path = "../tokio-tasks", features = ["xtra"] }
tracing = { version = "0.1" }
uuid = "0.8"
xtra = { version = "0.6" }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtras = { path = "../xtras" }

[build-dependencies]
vergen = "7"
anyhow = "1"
