[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bdk = { version = "0.19.0", default-features = false }
bdk-ext = { path = "../bdk-ext" }
conquer-once = "0.3"
derivative = "2"
hex = "0.4"
itertools = "0.10"
libp2p-core = { version = "0.33", default-features = false, features = ["serde"] }
maia = "0.2.0"
maia-core = "0.1.1"
maia-deprecated = { git = "https://github.com/comit-network/maia", tag = "0.1.1", package = "maia" } # includes subtract-fee bug, needed for protocols over legacy networking
nalgebra = { version = "0.31", default-features = false, features = ["std"] }
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
num = "0.4.0"
rand = "0.6"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "1", features = ["macros"] }
thiserror = "1"
time = { version = "0.3.11", features = ["macros", "formatting", "parsing", "serde"] }
tracing = "0.1"
url = { version = "2", default-features = false }
uuid = { version = "1.1", features = ["serde", "v4"] }
x25519-dalek = { version = "1.1" }

[dev-dependencies]
pretty_assertions = "1"
proptest = { version = "1", default-features = false, features = ["std"] }
serde_test = "1"
