[package]
name = "otel-tests"
version = "0.1.0"
edition = "2021"
description = "Internal #[otel_test] macro to export test spans over OTLP when the `otlp` feature is enabled"

[dependencies]
futures = "0.3"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.10.0", features = ["grpc-sys", "trace"], optional = true }
otel-tests-macro = { path = "../otel-tests-macro" }
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-opentelemetry = "0.17.4"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "local-time", "tracing-log", "json"] }

[features]
otlp = ["dep:opentelemetry", "dep:opentelemetry-otlp"]
