[package]
name = "rocket-deprecation"
version = "0.1.0"
edition = "2021"
description = "Utilities for deprecating rocket handlers."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
time = { version = "0.3", features = ["formatting"] }
