[package]
name = "sqlite-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
bdk = "0.21.0"
chashmap-async = "0.1"
futures = { version = "0.3", default-features = false }
hex = "0.4"
libp2p-core = { version = "0.33", default-features = false }
maia = "0.2.0"
maia-core = "0.1.1"
model = { path = "../model" }
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6.2", features = ["offline", "sqlite", "uuid", "runtime-tokio-rustls"] }
thiserror = "1"
time = { version = "0.3.14", features = [] }
tokio = { version = "1" }
tracing = "0.1"
x25519-dalek = "1.1"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["macros", "tracing"] }
