[package]
name = "taker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
daemon = { path = "../daemon" }
hex = "0.4"
http-api-problem = { version = "0.52.0", features = ["rocket"] }
itertools = "0.10"
libp2p-core = { version = "0.32", default-features = false }
model = { path = "../model" }
prometheus = { version = "0.13", default-features = false }
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
rocket-basicauth = { path = "../rocket-basicauth" }
rust-embed = "6.4"
rust-embed-rocket = { path = "../rust-embed-rocket" }
serde = { version = "1", features = ["derive"] }
shared-bin = { path = "../shared-bin" }
sqlite-db = { path = "../sqlite-db" }
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-tasks = { path = "../tokio-tasks", features = ["xtra"] }
tracing = { version = "0.1" }
uuid = "1.1"
webbrowser = "0.7.1"
x25519-dalek = "1.1"
xtra = { version = "0.6" }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }

[dev-dependencies]
serde_test = "1"
