[package]
name = "taker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
daemon = { path = "../daemon" }
hex = "0.4"
http-api-problem = { version = "0.55.0", features = ["rocket"] }
itertools = "0.10"
libp2p-core = { version = "0.33", default-features = false }
model = { path = "../model" }
prometheus = { version = "0.13", default-features = false }
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rocket-cookie-auth = { path = "../rocket-cookie-auth" }
rust-embed = "6.4"
rust-embed-rocket = { path = "../rust-embed-rocket" }
serde = { version = "1", features = ["derive"] }
shared-bin = { path = "../shared-bin" }
sqlite-db = { path = "../sqlite-db" }
strum = "0.24.1"
strum_macros = "0.24.3"
time = "0.3.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tracing = { version = "0.1" }
uuid = "0.8"
vergen-version = { path = "../vergen-version" }
x25519-dalek = "1.1"
xtra = { version = "0.6", features = ["instrumentation"] }
xtra-bitmex-price-feed = { path = "../xtra-bitmex-price-feed" }
xtra-libp2p = { path = "../xtra-libp2p" }
xtras = { path = "../xtras" }

[dev-dependencies]
serde_test = "1"
