[package]
name = "xtra-bitmex-price-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bitmex-stream = { path = "../bitmex-stream" }
futures = "0.3"
rust_decimal = { version = "1", features = ["serde-with-float"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3.11", features = ["serde-well-known"] }
tokio = "1"
tokio-tasks = { path = "../tokio-tasks" }
tracing = "0.1"
xtra = "0.6"
xtra_productivity = { version = "0.1.0" }

[dev-dependencies]
rust_decimal_macros = "1"
