[package]
name = "xtra-libp2p-ping"
version = "0.1.0"
edition = "2021"
description = "The ipfs (libp2p) ping protocol implemented using libp2p-xtra."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
conquer-once = "0.3"
futures = "0.3"
libp2p-xtra = { path = "../libp2p-xtra" }
prometheus = { version = "0.13", default-features = false }
rand = "0.8"
tokio-tasks = { path = "../tokio-tasks" }
tracing = "0.1"
xtra = "0.6"
xtra_productivity = "0.1"
xtras = { path = "../xtras" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
xtra = { version = "0.6", features = ["with-tokio-1"] }
