[package]
name = "xtra-libp2p-ping"
version = "0.1.0"
edition = "2021"
description = "The ipfs (libp2p) ping protocol implemented using xtra-libp2p."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
conquer-once = "0.3"
futures = "0.3"
prometheus = { version = "0.13", default-features = false }
quiet-spans = { path = "../quiet-spans" }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "tracing"] }
tokio-extras = { path = "../tokio-extras", features = ["xtra"] }
tracing = "0.1"
xtra = "0.6"
xtra-libp2p = { path = "../xtra-libp2p" }
xtra_productivity = { version = "0.1.0", features = ["instrumentation"] }
xtras = { path = "../xtras" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
xtra = { version = "0.6", features = ["tokio"] }
