[package]
name = "xtras"
version = "0.1.0"
edition = "2021"
description = "Extension trait for the xtra actor framework"

[dependencies]
anyhow = "1"
async-trait = "0.1.53"
futures = { version = "0.3", default-features = false, features = ["std"] }
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tasks = { path = "../tokio-tasks" }
tracing = { version = "0.1" }
xtra = { version = "0.6" }
xtra_productivity = { version = "0.1.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
